fixed the spacing

--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -23,7 +23,7 @@
     .bar {
       font-size: 2rem;
       // border: 2px solid red;
-      color: var(--vanilla-ice);
+      color: var(--paprika);
       margin-right: 20px;
     }
   }
@@ -59,6 +59,8 @@
 
 @media only screen and (min-width: 768px) {
   .Navbar {
+  padding: 0 40px;
+
     main {
       .logo {
         font-size: 3.5rem;
